[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thRSAhold"
version = "0.1.0"

description = "A Hybrid RSA Threshold Encryption Library"
authors = [
    {name = "Eric Wagner", email = "eric.wagner@fkie.fraunhofer.de"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "pycryptodome",
]
keywords = ["threshold","encryption","RSA","AES"]

[tool.setuptools]
py-modules = ["thRSAhold"]